Fixed weird width on mobile.

--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,7 @@ text-align: left;
 {
   display: table-cell;
   vertical-align: middle;
-  width: 50%;
+  width: 70%;
 }
 
 #up
